--- a/gokui/chr2/test_Library.ipynb
+++ b/gokui/chr2/test_Library.ipynb
@@ -16,17 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from Library_chr2.seed import seed_torch\n",
-    "from Library_chr2.lepoch import train_lepoch"
+    "from Library_chr2.train_1epoch import train_1epoch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +52,16 @@
      "text": [
       "0.8742348358375069\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Text(0, 0.5, 'loss')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -113,120 +123,129 @@
     "\n",
     "plt.plot(losses)\n",
     "plt.xlabel(\"epoch\")\n",
-    "plt.ylabel(\"loss\")\n",
-    "plt.savefig(\"test-batch.png\")"
+    "plt.ylabel(\"loss\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 29/29 [00:00<00:00, 337.96it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1902.27it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1745.65it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 993.63it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1570.72it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1838.47it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1959.20it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1841.25it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1632.40it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1613.17it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1830.61it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1955.98it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1950.49it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1897.93it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1807.76it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1730.22it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1740.50it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1833.67it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1927.16it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1723.51it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1919.01it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1956.99it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1927.13it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1879.34it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1998.76it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1978.06it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1956.80it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1993.85it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1926.16it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1919.01it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1898.91it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1873.76it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1883.71it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 2002.91it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1782.64it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1865.19it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1804.16it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1858.13it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1230.49it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1073.64it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1834.53it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1500.05it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1501.33it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1844.99it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1864.94it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1835.44it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1649.06it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1899.89it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1872.31it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1846.90it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1878.27it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1810.58it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1843.71it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1828.05it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1795.96it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1842.34it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1903.88it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1945.01it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1659.05it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1478.54it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1521.20it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1587.03it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1495.13it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1441.05it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1358.37it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1550.04it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1339.31it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1580.12it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1623.27it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1492.95it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1572.48it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1557.62it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1584.26it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1486.58it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1631.43it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1584.61it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1531.21it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1743.19it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1636.75it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1792.57it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1719.44it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1638.71it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1779.54it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1721.19it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1794.24it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1731.88it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1773.39it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1733.31it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1610.57it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1602.55it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1810.12it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1714.25it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1825.14it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1886.81it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1875.89it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1797.10it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1817.37it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1784.47it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1667.56it/s]\n",
-      "100%|██████████| 29/29 [00:00<00:00, 1623.16it/s]\n"
+      "100%|██████████| 29/29 [00:00<00:00, 1606.55it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 1661.13it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2530.74it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2424.94it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2360.56it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2481.99it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2407.28it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2374.52it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2218.48it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2196.49it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2307.05it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2227.01it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 919.91it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 1224.31it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2244.39it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2281.87it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2318.36it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2028.67it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2394.15it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2125.44it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2280.97it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2326.74it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2451.62it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2285.12it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2374.89it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2352.98it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2463.24it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2489.71it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2302.90it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2411.86it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2411.81it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2426.77it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2321.50it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2499.79it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2329.10it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2303.78it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2404.80it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2238.36it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2374.20it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2386.03it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2541.42it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2348.03it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2448.71it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2420.50it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2430.85it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2466.89it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2251.20it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2365.01it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 1064.49it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2357.72it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2372.16it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2293.05it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 1363.11it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2304.87it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2375.12it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2422.57it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2223.43it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2409.23it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2436.01it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2351.61it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2372.58it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2312.62it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2421.12it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2381.35it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2380.56it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2404.04it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2316.46it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2331.37it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2368.56it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2448.91it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2485.69it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2393.54it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2252.79it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2280.75it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2390.34it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2159.33it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2287.44it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2311.66it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2438.21it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2316.15it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2360.42it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2381.17it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2212.71it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2400.48it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2431.24it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2333.66it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2387.01it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2285.08it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2228.19it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2190.67it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2391.19it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2161.59it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2280.92it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2288.52it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2253.12it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2388.79it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2354.62it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2424.16it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 2328.92it/s]\n",
+      "100%|██████████| 29/29 [00:00<00:00, 1670.99it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Text(0, 0.5, 'loss')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -243,21 +262,13 @@
     "dataset = TensorDataset(X, y)\n",
     "train_loader = DataLoader(dataset, batch_size=64, shuffle=False)\n",
     "for ep in range(100):\n",
-    "    avg_acc, avg_loss = train_lepoch(model, train_loader, lossfun, optimizer, device)\n",
+    "    avg_acc, avg_loss = train_1epoch(model, train_loader, lossfun, optimizer, device)\n",
     "    losses.append(avg_loss)\n",
     "\n",
     "plt.plot(losses)\n",
     "plt.xlabel(\"epoch\")\n",
-    "plt.ylabel(\"loss\")\n",
-    "plt.savefig(\"test-minibacth.png\")"
+    "plt.ylabel(\"loss\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
