--- a/gokui/chr2/3.ipynb
+++ b/gokui/chr2/3.ipynb
@@ -90,6 +90,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "訓練セットから検証セットを切り出し、自分のモデルの性能を検証する手法をホールドアウト検証(holdout validation)という。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -107,6 +114,20 @@
     "\n",
     "# train から valid を切り出す\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X_train, y_train, test_size=0.2, stratify=y_train, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "長いコードとなっており、難しそうだが、やっていることは訓練データ、検証データ、、テストデータに対して、datasetとdataloaderを定義しているだけ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[datasets & dataloaders](https://pytorch.org/tutorials/beginner/basics/data_tutorial.html)"
    ]
   },
   {
@@ -425,13 +446,6 @@
     "        sum(y_test.detach().numpy().copy() == test_preds) / len(y_test),\n",
     "    )\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
